overflow visible fixes all the problems!

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,7 +9,7 @@
 
 body { }
 html{text-rendering: optimizeLegibility;}
-body.home, html{overflow: auto!important;}
+body.home, html{overflow: visible!important;}
 
 body.single,
 body.blog,
